# aoc-hs-2022

./: Common.hs  aoc2022-hs.cabal  day1.hs  day10.hs  day2.hs  day3.hs  day4.hs  day5.hs  day6.hs  day7.hs  day8.hs  day9.hs
